# LIL-BRO

./: .gitignore  CONTEXT.md  LICENSE  README.md  ROADMAP.md  SESSION.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: app.py  router.py
src/agents/: ollama_agent.py
src/commands/: handler.py
src/journal/: recorder.py
src/ui/: app.tcss  input_bar.py  startup.py  status_bar.py
src_local/: app.py  config.py  path_utils.py  personas.py  router.py  skills.py  vram.py
src_local/agents/: base.py  claude_agent.py  cloud_install.py  codex_agent.py  connectors.py  flex_agent.py  hardware.py  ollama_agent.py  ollama_install.py  phrases.py  tools.py
src_local/bibles/: coding.index.json  expand_bible.py  reasoning.index.json  store.py
src_local/commands/: handler.py
src_local/journal/: html_export.py  recorder.py  session_lock.py  session_log.py
src_local/memory/: __init__.py  chroma_store.py  context_injector.py  preference_log.py  project_registry.py  session_summarizer.py
src_local/pwa/: __init__.py  (+2 more)
tests/: conftest.py  test_agent_base.py  test_backend_cmd.py  test_claude_connector.py  test_claude_session.py  test_cloud_install.py  test_codex_connector.py  test_config.py  test_connectors.py  test_cross_talk.py  test_flex_agent.py  test_hardware.py  test_living_map.py  test_memory.py  test_panels_helpers.py  test_personas.py  test_phase56_cmds.py  test_preference_log.py  test_pwa.py  test_resume_reset_cmd.py  test_roadmap_cmds.py  test_roadmap_helpers.py  test_teaching.py  test_tool_regex.py  test_tools.py  test_vram.py
(+92 files in other folders)
